// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as object with content) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message with content \\"message test\\"
    received: message was not edited
",
  "pass": false,
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as object with id) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message with id 123
    received: message was not edited
",
  "pass": false,
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier as string) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the message with id 123
    received: message was not edited
",
  "pass": false,
}
`;

exports[`testing toEditMessage should fail due to message was not edited by the bot (no messageIdentifier) 1`] = `
Object {
  "message": "    
    expected: testing bot to edit the last message sent
    received: message was not edited
",
  "pass": false,
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages (both embed) 1`] = `
Object {
  "message": "    
    [32m- expected  - 10[39m
    [31m+ received  +  8[39m
    
    [2m  Object {[22m
    [2m    \\"author\\": Object {[22m
    [32m-     \\"icon_url\\": \\"https://i.imgur.com/wSTFkRM.png\\",[39m
    [32m-     \\"name\\": \\"Some name\\",[39m
    [32m-     \\"url\\": \\"https://discord.js.org\\",[39m
    [31m+     \\"icon_url\\": undefined,[39m
    [31m+     \\"name\\": \\"Test\\",[39m
    [31m+     \\"url\\": undefined,[39m
    [2m    },[22m
    [32m-   \\"color\\": 39423,[39m
    [32m-   \\"description\\": \\"Some description here\\",[39m
    [31m+   \\"color\\": null,[39m
    [31m+   \\"description\\": null,[39m
    [2m    \\"fields\\": Array [[22m
    [2m      Object {[22m
    [2m        \\"inline\\": false,[22m
    [2m        \\"name\\": \\"Regular field title\\",[22m
    [2m        \\"value\\": \\"Some value here\\",[22m
    [2m      },[22m
    [2m      Object {[22m
    [2m        \\"inline\\": false,[22m
    [2m        \\"name\\": \\"​\\",[22m
    [2m        \\"value\\": \\"​\\",[22m
    [2m      },[22m
    [2m      Object {[22m
    [2m        \\"inline\\": true,[22m
    [2m        \\"name\\": \\"Inline field title\\",[22m
    [2m        \\"value\\": \\"Some value here\\",[22m
    [2m      },[22m
    [2m      Object {[22m
    [2m        \\"inline\\": true,[22m
    [2m        \\"name\\": \\"Inline field title\\",[22m
    [2m        \\"value\\": \\"Some value here\\",[22m
    [2m      },[22m
    [2m    ],[22m
    [2m    \\"footer\\": null,[22m
    [2m    \\"image\\": null,[22m
    [32m-   \\"thumbnail\\": Object {[39m
    [32m-     \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",[39m
    [32m-   },[39m
    [31m+   \\"thumbnail\\": null,[39m
    [2m    \\"timestamp\\": null,[22m
    [32m-   \\"title\\": \\"Some title\\",[39m
    [31m+   \\"title\\": null,[39m
    [2m    \\"type\\": \\"rich\\",[22m
    [32m-   \\"url\\": \\"https://discord.js.org/\\",[39m
    [31m+   \\"url\\": null,[39m
    [2m  }[22m
",
  "pass": false,
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages (expect primitive and returned embed) 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: Object {
      \\"author\\": Object {
        \\"icon_url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
        \\"name\\": \\"Some name\\",
        \\"url\\": \\"https://discord.js.org\\",
      },
      \\"color\\": 39423,
      \\"description\\": \\"Some description here\\",
      \\"fields\\": Array [
        Object {
          \\"inline\\": false,
          \\"name\\": \\"Regular field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": false,
          \\"name\\": \\"​\\",
          \\"value\\": \\"​\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
        Object {
          \\"inline\\": true,
          \\"name\\": \\"Inline field title\\",
          \\"value\\": \\"Some value here\\",
        },
      ],
      \\"footer\\": null,
      \\"image\\": null,
      \\"thumbnail\\": Object {
        \\"url\\": \\"https://i.imgur.com/wSTFkRM.png\\",
      },
      \\"timestamp\\": null,
      \\"title\\": \\"Some title\\",
      \\"type\\": \\"rich\\",
      \\"url\\": \\"https://discord.js.org/\\",
    }
",
  "pass": false,
}
`;

exports[`testing toEditMessage should get fail test due to bot returned different messages both primitive values 1`] = `
Object {
  "message": "    
    expected: 'expect value'
    received: 'this is the message content'
",
  "pass": false,
}
`;

exports[`testing toEditMessage should get failed test due to bot returned equal messages (isNot true) 1`] = `
Object {
  "message": "    
    expected: message from bot be different from expectation
    received: both returned and expectation are equal
",
  "pass": false,
}
`;

exports[`testing toEditMessage should get success test due to bot returned different messages (isNot true) 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal message 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (string number) 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (string type) 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should get success test due to bot returned equal messages (type embed) 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should get success test due to timeout but isNot = true 1`] = `
Object {
  "pass": true,
}
`;

exports[`testing toEditMessage should return a failed test due to invalid parameter (null) 1`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an MessageEmbedLike object
    received: null
",
  "pass": false,
}
`;

exports[`testing toEditMessage should return a failed test due to invalid parameter (undefined) 1`] = `
Object {
  "message": "    
    expected: expect value to be a primitive value (string, boolean, number) or an MessageEmbedLike object
    received: undefined
",
  "pass": false,
}
`;
